--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,53 @@
+.cardContainer {
+  width: 360px;
+  height: 504px;
+  margin-left: 30px;
+}
+
 .cardTemplate {
-  
+  position: relative;
+  background-color: grey;
+  border-radius: 14px;
+  width: 100%;
+  height: 100%;
+}
+
+.cardTitle {
+  position: absolute;
+  left: 5%;
+  top: 5px;
+}
+
+.cardGame {
+  position: absolute;
+  right: 5%;
+  top: 5px;
+}
+
+.cardImage {
+  position: absolute;
+  width: 90%;
+  height: 220px;
+  top: 40px;
+  left: 5%;
+  object-fit: cover;
+}
+
+.cardType {
+  position: absolute;
+  right: 5%;
+  top: 250px;
+}
+
+.cardAttkName {
+  position: absolute;
+  left: 5%;
+  top: 280px;
+}
+
+.cardFlavorText {
+  position: absolute;
+  left: 5%;
+  width: 90%;
+  top: 320px;
 }
