--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,51 +1,72 @@
+p {
+  margin: 0;
+  text-shadow: 2px 2px 4px #000000;
+  color: white;
+  font-family: 'Dosis', sans-serif;
+}
+
 .cardContainer {
   width: 360px;
   height: 504px;
-  margin-left: 30px;
 }
 
 .cardTemplate {
   position: relative;
-  background-color: grey;
+  background-color: black;
+  border-style: solid;
+  border-color: white;
+  border-width: 5px;
   border-radius: 14px;
   width: 100%;
   height: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .cardTitle {
   position: absolute;
   left: 5%;
-  top: 5px;
+  top: 10px;
+  font-size: 2em;
 }
 
 .cardGame {
   position: absolute;
-  right: 5%;
-  top: 5px;
+  right: 2%;
+  bottom: 1%;
+  font-size: 1em;
+  opacity: 0.8;
+  font-style: italic;
 }
 
 .cardImage {
-  position: absolute;
-  width: 90%;
-  height: 220px;
-  top: 40px;
-  left: 5%;
   object-fit: cover;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .cardType {
   position: absolute;
-  right: 5%;
-  top: 250px;
+  right: 2%;
+  bottom: 5%;
+  opacity: 0.8;
+  font-size: 0.8em;
 }
 
 .cardAttkName {
   position: absolute;
-  left: 5%;
-  top: 280px;
+  text-transform: uppercase;
+  width: 5px;
+  word-wrap: break-word;
+  right: 6%;
+  top: 2%;
+  font-size: 1.5em;
+  text-align: right;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .cardFlavorText {
+  visibility: hidden;
   position: absolute;
   left: 5%;
   width: 90%;
