--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -1,5 +1,5 @@
 .cardsContainer {
-  background-color: yellow;
+  background: linear-gradient(to bottom right, #283048, #859398);
   flex: 3 1 auto;
   overflow: auto;
 }
