--- a/src/components/GlobalDeck/GlobalDeck.css
+++ b/src/components/GlobalDeck/GlobalDeck.css
@@ -1,7 +1,7 @@
 .deckWrapper {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 li {
