--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,16 @@
-header {
+.headerBlock {
   display: block;
   padding-left: 30px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  height: 80px;
-  background-color: green;
+  height: 65px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .headerTitle {
-  color: white;
+  color: black;
+  font-family: 'Josefin Sans', sans-serif;
 }
