--- a/src/components/GlobalDeck/GlobalDeck.css
+++ b/src/components/GlobalDeck/GlobalDeck.css
@@ -1,10 +1,28 @@
+li {
+  list-style: none;
+  padding: 20px 10px;
+}
+
 .deckWrapper {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
 }
 
-li {
-  list-style: none;
-  padding: 20px 10px;
+.Modal {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  background-color: papayawhip;
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rebeccapurple;
 }
