--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -12,7 +12,7 @@ p {
 
 .cardTemplate {
   position: relative;
-  background: linear-gradient(bottom left, #20002c, #28242A);
+  background-image: url("http://farm9.staticflickr.com/8035/8023402798_6e5160ebc3_o.png");
   border-style: solid;
   border-color: white;
   border-width: 5px;
