--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -4,12 +4,14 @@
   justify-content: space-around;
   width: 100%;
   height: 100%;
+  align-items: center;
 }
 
 .inputContainer {
   display: flex;
   flex-direction: column;
   width: 50%;
+  justify-content: space-around;
 }
 
 input {
